RST-3859 Using new pipeline - alpine images for ruby 2.7.5